--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 
 }
 body{
+    line-height: 1.5;
     background-color: smokewhite;
     flex-wrap: wrap;
     margin:0;
@@ -24,8 +25,14 @@ body{
 color:white;
 
 }
+.logo{
+    font-size:1.4rem;
+    font-weight: bolder;
 
-
+}
+.body-text{
+    color: var(--Very-Dark-Violet);
+}
 
 /* navbar section */
 .navbar{
@@ -49,19 +56,25 @@ color:white;
 
 /* main content area */
 
-.container{
+.main{
     display:flex;
     flex-wrap: wrap;
     align-items: center;
+    padding-left: 10vw;
+    padding-top: 10vh;
 }
-.main{
-    justify-items: flex-end;
-}
+
 .main .content{
     display:flex;
     flex-direction:column;
     width:40vw;
+    padding:10px 30px 0 0;
 
+}
+
+.content .heading{
+    font-size:2.5rem;
+    padding-right: 20px;
 }
 .main-image{
     width:40vw;
@@ -70,15 +83,111 @@ color:white;
     
 }
 
+/* form area */
+.container{
+    background:linear-gradient(0deg,var(--Grayish-Violet) 100px, white 100px);
+    
+}
+.form{
+    background: url("images/bg-shorten-desktop.svg");
+    background-color: var(--Dark-Violet);
+    margin:5vh 10vw;
+    padding: 5vh 5vw;
+    border-radius: 10px;
+}
+.form input{
+    font-size:1.4rem;
+    width: 50vw;
+    margin-right: 30px;
+    padding: 5px;
+    border-radius: 10px;
+}
+.history{
+    margin:0 10vw;
+    
+}
+.link{
+    background:white;
+    padding: 5px 20px;
+    border-radius:5px;
+}
+.original{
+text-decoration: none;
+color:  black;
+}
+.shorten{
+    color: var(--Cyan);
+    text-decoration: none;
+float: right;
+}
+/* statistics-section */
+.statistics-section{
+    padding-top: 20vh;
+    background-color:var(--Grayish-Violet);
+}
+
+.statistics-section .heading{
+font-size:1.8rem;
+text-align:center;
+}
+
+.statistics-section>.body-text{
+    padding: 20px 30vw;
+    text-align: center;
+}
+
+.cards{
+    display: flex;
+    margin: 10vh 10vw 0 10vw;
+}
+
+
+.card{
+    width: 33%;
+    padding:20px;
+}
+
+.image {
+
+    background-color:var(--Dark-Violet);
+
+    border-radius: 50% 50% 0 50% ;
+    border:none;
+    padding: 5px;
+}
+.sub-heading{
+    font-size:1.4rem;
+    margin-bottom: 10px;
+}
+
+
+/* footer */
+
+Footer{
+    display: flex;
+}
+.externals{
+    display: flex;
+}
+
+Footer li {
+list-style: none;
+}
 
 button{
     padding: 10px 15px;
     border-radius: 20px;
     border: none;
     max-width: 100px;
+    margin: 10px 0;
 }
 
+button:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+}
 .heading{
     font-weight: bold;
-    font-size:1.2rem;
+
+
 }
